# iceberg

./: .asf.yaml  .gitattributes  .gitignore  .markdownlint.jsonc  .tool-versions  .travis.yml  0001-Spark-3.5-Display-more-read-metrics-on-Spark-SQL-UI-.patch  11340.diff  404.html  AGENTS.md  Avro: Switch tests to JUnit5  CONTRIBUTING.md  Core: Switch tests to Junit5 in avro package  KAFKA_CONNECT_VARIANT_SHREDDING.md  LICENSE  NOTICE  README.md  SECURITY-THREAT-MODEL.md  V4_Testing_Guide.md  arrow_codereview.patch  arrow_codereview_patch_from_commit.patch  arrow_codereview_topush.patch  arrow_coreview2.patch  azure-pipelines.yml  baseline.gradle  basepageiterator.patch  build.gradle  cccs-publish.sh  data.txt  deploy.gradle  diff.patch  doap.rdf  endpoint_analysis_todos.txt  feed_json_created.json  feed_json_updated.json  feed_rss_updated.xml  gradle.properties  gradlew  hive2.gradle  hive3.gradle  (+25 more)
python/: .pre-commit-config.yaml  .python-version  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  Untitled.ipynb  build-module.py  build.py  docker-compose.ci.yml  docker-compose.yml  pylintrc  pyproject.toml  release-announcement-email.txt  setup.cfg  setup.py  spellcheck-dictionary.txt  tox.ini
python/dev/: .rat-excludes  Dockerfile  RELEASE.md  check-license  docker-compose-azurite.yml  docker-compose-gcs-server.yml  docker-compose-integration.yml  docker-compose.yml  entrypoint.sh  provision.py  run-azurite.sh  run-gcs-server.sh  run-minio.sh  spark-defaults.conf
python/dev/data/: beers.csv  breweries.csv
python/docs/: mkdocs.yml
python/docs/docs/: index.md
python/iceberg/: __init__.py  exceptions.py
python/iceberg/api/: __init__.py  append_files.py  combined_scan_task.py  data_file.py  data_operations.py  delete_files.py  expire_snapshots.py  file_format.py  file_scan_task.py  files.py  filterable.py  filtered_snapshot.py  manifest_file.py  metrics.py  overwrite_files.py  partition_field.py  partition_spec.py  pending_update.py  replace_partitions.py  rewrite_files.py  rollback.py  scan_task.py  schema.py  snapshot.py  snapshot_iterable.py  struct_like.py  table.py  table_scan.py  tables.py  transaction.py  update_properties.py  update_schema.py
python/iceberg/core/: __init__.py  base_combined_scan_task.py  base_file_scan_task.py  base_metastore_table_operations.py  base_metastore_tables.py  base_snapshot.py  base_table.py  base_table_scan.py  base_transaction.py  data_files.py  data_table_scan.py  filtered_manifest.py  generic_data_file.py  generic_manifest_file.py  generic_partition_field_summary.py  manifest_entry.py  manifest_list_writer.py  manifest_reader.py  partition_data.py  partition_spec_parser.py  partition_summary.py  scan_summary.py  schema_parser.py  snapshot_parser.py  table_metadata.py  table_metadata_parser.py  table_operations.py  table_properties.py
python/iceberg/exceptions/: __init__.py  exceptions.py
python/iceberg/hive/: __init__.py  hive_table_operations.py  hive_tables.py  hive_types.py
python/iceberg/parquet/: __init__.py  arrow_table_utils.py  dataset_utils.py  gandiva_utils.py  iceberg_to_arrow.py  parquet_reader.py  parquet_rowgroup_evaluator.py  parquet_schema_utils.py  parquet_to_iceberg.py
python/iceberg/spark/: __init__.py  table_identifier.py
python/mkdocs/: README.md  gen_doc_stubs.py  mkdocs.yml  requirements.txt
python/mkdocs/docs/: SUMMARY.md  api.md  cli.md  configuration.md  contributing.md  feature-support.md  how-to-release.md  index.md  installing.md  verify-release.md
python/pyiceberg/: __init__.py  conversions.py  exceptions.py  files.py  literals.py  manifest.py  partitioning.py  schema.py  serializers.py  transforms.py  typedef.py  types.py
python/pyiceberg/avro/: __init__.py  decoder.py  decoder_basic.c  decoder_fast.pyi  decoder_fast.pyx  encoder.py  file.py  lazydict.py  reader.py  resolver.py  writer.py
python/pyiceberg/catalog/: __init__.py  base.py  base_aws_catalog.py  dynamodb.py  glue.py  hive.py  jdbc.py  noop.py  null.py  rest.py  sql.py
python/pyiceberg/cli/: console.py  output.py
python/pyiceberg/expression/: literals.py
python/pyiceberg/expressions/: __init__.py  base.py  literals.py  parser.py  visitors.py
python/pyiceberg/io/: __init__.py  base.py  fsspec.py  memory.py  pyarrow.py  s3fs.py
python/pyiceberg/table/: __init__.py  base.py  metadata.py  partitioning.py  refs.py  scan.py  snapshots.py  sorting.py
python/pyiceberg/utils/: bin_packing.py  concurrent.py  config.py  datetime.py  decimal.py  deprecated.py  file_stats.py  iceberg_base_model.py  lazydict.py  parsing.py  pyarrow_dataset.py  schema_conversion.py  singleton.py
python/src/iceberg/: conversions.py  exceptions.py  expressions.py  files.py  partition_field.py  partition_spec.py  partitioning.py  schema.py  serializers.py  transforms.py  types.py  utils.py  validation_exception.py
python/src/pyiceberg/: transforms.py
python/tests/: conftest.py  test_conversions.py  test_expressions.py  test_fokko.py  test_integration.py  test_integration_manifest.py  test_integration_schema.py  test_literals.py  test_partition_field.py  test_partitioning.py  test_schema.py  test_transforms.py  test_type.py  test_typedef.py  test_types.py  test_version.py  test_vo.py
python/tests/api/: test_conversions.py  test_file_format.py  test_helpers.py  test_partition_spec.py
python/tests/avro/: README.md  manifest.avro  test_decoder.py  test_encoder.py  test_file.py  test_reader.py  test_resolver.py  test_writer.py
python/tests/catalog/: __init__.py  conftest.py  integration_test_dynamodb.py  integration_test_glue.py  integration_test_jdbc_postgres.py  integration_test_sql.py  test_base.py  test_catalog.py  test_catalog_base.py  test_dynamodb.py  test_glue.py  test_glue_helper.py  test_glue_integration.py  test_hive.py  test_in_memory.py  test_jdbc.py  test_rest.py  test_sql.py  test_sql_integration.py
python/tests/cli/: test_console.py  test_output.py
python/tests/core/: conftest.py  test_base_table_scan.py  test_filesystem_tables.py  test_partition_spec.py  test_partition_spec_parser.py  (+3 more)
(+49262 files in other folders)
